--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,6 @@
   </style>
 
 <nav>
-  <a href="/My Portfolio/">Home</a> |
-  <a href="/My Portfolio/schedule">Course Schedule & Project List</a>
+  <a href="/DIG3171/">Home</a> |
+  <a href="/DIG3171/schedule">Course Schedule & Project List</a>
 </nav>
